WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275192
REGRESSION(
279760@main
): ASSERTION FAILED: document()->inHitTesting() in WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange()
https://bugs.webkit.org/show_bug.cgi?id=275192
Summary
REGRESSION(279760@main): ASSERTION FAILED: document()->inHitTesting() in WebC...
Fujii Hironori
Reported
2024-06-05 20:55:45 PDT
a lot of tests are crashing due to an assertion failure for Windows Debug layout tests. Buildbot: builder WinCairo-64-bit-Debug-Tests build 22832 :
279764@main
https://build.webkit.org/#/builders/727/builds/22832
https://build.webkit.org/results/WinCairo-64-bit-Debug-Tests/279764@main%20(22832)/animations/added-while-suspended-crash-log.txt
ASSERTION FAILED: document()->inHitTesting() C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebCore\page/LocalFrameViewLayoutContext.cpp(351) : void WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange() 1 00007FFD23E01CA9 WTFCrash 2 00007FFD066C2EFD WTFCrashWithInfo 3 00007FFD0A448D33 WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange 4 00007FFD0A3FDA7B WebCore::LocalFrameView::setNeedsLayoutAfterViewConfigurationChange 5 00007FFD0A3FDA42 WebCore::LocalFrameView::availableContentSizeChanged 6 00007FFD0A641FCC WebCore::ScrollView::updateScrollbars 7 00007FFD0A40816A WebCore::LocalFrameView::setScrollPinningBehavior 8 00007FFD0FC80379 WebKit::WebPage::setScrollPinningBehavior 9 00007FFD0FC7DD7B WebKit::WebPage::WebPage 10 00007FFD0FC7BAAF WebKit::WebPage::create 11 00007FFD0F795D8C WebKit::WebProcess::createWebPage 12 00007FFD0E6DE006 IPC::callMemberFunction<WebKit::WebProcess,WebKit::WebProcess,void (WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>, WebKit::WebPageCreationParameters &&),std::tuple<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters> >::<lambda_1>::operator()<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters> 13 00007FFD0E6DDF77 std::invoke<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters> 14 00007FFD0E6DDF3E std::_Apply_impl<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters>,0,1> 15 00007FFD0E6DDEF2 std::apply<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters> > 16 00007FFD0E6DB2CF IPC::callMemberFunction<WebKit::WebProcess,WebKit::WebProcess,void (WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>, WebKit::WebPageCreationParameters &&),std::tuple<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>,WebKit::WebPageCreationParameters> > 17 00007FFD0E6D308A IPC::handleMessage<Messages::WebProcess::CreateWebPage,WebKit::WebProcess,WebKit::WebProcess,void (WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>, WebKit::WebPageCreationParameters &&)> 18 00007FFD0E6CD7F2 WebKit::WebProcess::didReceiveWebProcessMessage 19 00007FFD0F796530 WebKit::WebProcess::didReceiveMessage 20 00007FFD0F21C31A IPC::Connection::dispatchMessage 21 00007FFD0F21C592 IPC::Connection::dispatchMessage 22 00007FFD0F21C89D IPC::Connection::dispatchOneIncomingMessage 23 00007FFD0F221D6B IPC::Connection::enqueueIncomingMessage::<lambda_6>::operator() 24 00007FFD0F221D07 WTF::Detail::CallableWrapper<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\Connection.cpp:1287:31',void>::call 25 00007FFD23E1A3F4 WTF::Function<void ()>::operator() 26 00007FFD23EA198A WTF::RunLoop::performWork 27 00007FFD23F94400 WTF::RunLoop::wndProc 28 00007FFD23F94337 WTF::RunLoop::RunLoopWndProc 29 00007FFD27D10089 CallWindowProcW 30 00007FFD27D0FA02 DispatchMessageW 31 00007FFD23F945DD WTF::RunLoop::run ERROR: 00000268A8262FD0 - [PID=9444] WebProcessProxy::didClose (web process crash) C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebProcessProxy.cpp(1179) : virtual void WebKit::WebProcessProxy::didClose(IPC::Connection &) ERROR: 00000268A8262FD0 - [PID=9444] WebProcessProxy::processDidTerminateOrFailedToLaunch: reason=Crash C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebProcessProxy.cpp(1187) : void WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch(ProcessTerminationReason) ERROR: 00000268A823E700 - [pageProxyID=9, webPageID=10, PID=9444] WebPageProxy::processDidTerminate: (pid 9444), reason=Crash C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebPageProxy.cpp(9796) : void WebKit::WebPageProxy::resetStateAfterProcessTermination(ProcessTerminationReason) ERROR: 00000268A823E700 - [pageProxyID=9, webPageID=10, PID=9444] WebPageProxy::dispatchProcessDidTerminate: reason=Crash C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebPageProxy.cpp(9854) : void WebKit::WebPageProxy::dispatchProcessDidTerminate(ProcessTerminationReason) WebProcess terminated (pid 9444) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-06-05 20:59:17 PDT
Apple-iOS-17-Simulator-Debug-WK2-Tests is also crashing. Buildbot: builder Apple-iOS-17-Simulator-Debug-WK2-Tests build 1833 :
279761@main
https://build.webkit.org/#/builders/939/builds/1833
https://build.webkit.org/results/Apple-iOS-17-Simulator-Debug-WK2-Tests/279761@main%20(1833)/results.html
https://build.webkit.org/results/Apple-iOS-17-Simulator-Debug-WK2-Tests/279761@main%20(1833)/accessibility/accessibility-node-reparent-crash-log.txt
ASSERTION FAILED: document()->inHitTesting() /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebCore/page/LocalFrameViewLayoutContext.cpp(351) : void WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange() com.apple.WebKit.WebContent.Development terminated (pid 84584) for reason: crash
Fujii Hironori
Comment 2
2024-06-05 21:16:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29568
EWS
Comment 3
2024-06-05 21:25:03 PDT
Committed
279765@main
(79cd6c061e54): <
https://commits.webkit.org/279765@main
> Reviewed commits have been landed. Closing PR #29568 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-06-05 21:26:15 PDT
<
rdar://problem/129318264
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug