REGRESSION(279760@main): ASSERTION FAILED: document()->inHitTesting() in WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange() https://bugs.webkit.org/show_bug.cgi?id=275192

Unreviewed crash fix.

https://commits.webkit.org/279760@main inadvertently changed a
condition of an assertion in setNeedsLayoutAfterViewConfigurationChange.

* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
Partially reverted the condition.

Canonical link: https://commits.webkit.org/279765@main